--- a/package.json
+++ b/package.json
@@ -5,33 +5,33 @@
     "version": "0.0.1",
     "publisher": "your-publisher-name",
     "engines": {
-      "vscode": "^1.50.0"
+        "vscode": "^1.50.0"
     },
     "activationEvents": [
-      "onCommand:extension.helpWithGit"
+        "onCommand:extension.helpWithGit"
     ],
     "main": "./out/extension.js",
     "contributes": {
-      "commands": [
-        {
-          "command": "extension.helpWithGit",
-          "title": "Help with Git"
-        }
-      ]
+        "commands": [
+            {
+                "command": "extension.helpWithGit",
+                "title": "Help with Git"
+            }
+        ]
     },
     "scripts": {
-      "vscode:prepublish": "npm run compile",
-      "compile": "tsc -p ./"
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./"
     },
     "devDependencies": {
-      "@types/node": "^10.0.0",
-      "@types/vscode": "^1.50.0",
-      "typescript": "^4.0.0",
-      "vscode-test": "^1.4.0"
+        "@types/mocha": "^10.0.6",
+        "@types/node": "^10.0.0",
+        "@types/vscode": "^1.50.0",
+        "typescript": "^4.0.0",
+        "vscode-test": "^1.4.0"
     },
     "dependencies": {
-      "axios": "^0.21.1",
-      "dotenv": "^8.2.0"
+        "axios": "^0.21.1",
+        "dotenv": "^8.2.0"
     }
-  }
-  
+}
